Remove unnecessary try catch blocks